--- a/04gy_cpp/04gy_cpp.tex
+++ b/04gy_cpp/04gy_cpp.tex
@@ -5,7 +5,8 @@
 \usepackage[T1]{fontenc}
 \PassOptionsToPackage{defaults=hu-min}{magyar.ldf}
 \usepackage[magyar]{babel}
-\usepackage{amsmath, xcolor, amsthm,amssymb,paralist,array, ellipsis, graphicx}
+\usepackage{amsmath, xcolor, amsthm,amssymb,paralist,array, ellipsis, graphicx, tikz}
+\usetikzlibrary{shapes.geometric, arrows, positioning}
 %\usepackage{marvosym}
 
 \usepackage{listings}
@@ -122,7 +123,7 @@ int main()
 	\end{lstlisting}
 	Kimenet: \texttt{20 8} (ezen az implementáción)
 	
-	A \texttt{sizeof} operátor megadja a paraméterként megadott típus, vagy objektum esetében annak típusának méretét (bővebben később). Ez minden implementációra specifikus. Bár mindkétszer azt hittünk hogy \texttt{t} tömb által foglal méretét írattuk ki, és azt várnánk hogy a két szám ugyanaz lesz, a valóságban amikor azt érték szerint megpróbáljuk átadni, a \texttt{t} tömb átkonvertálódik a tömb elejére mutató pointerré.
+	Bár mindkétszer azt hittünk hogy \texttt{t} tömb által foglalt méretét írattuk ki, és azt várnánk hogy a két szám ugyanaz lesz, a valóságban amikor azt érték szerint megpróbáljuk átadni, a \texttt{t} tömb átkonvertálódik a tömb elejére mutató pointerré.
 	\begin{lstlisting}
 void f(int t[8])
 {
@@ -138,7 +139,7 @@ void f(int t[8])
 	\begin{note}
 		Tömböt értékül adni a szabvány szerint nem is lehet: \texttt{int *t2[5] = t} nem helyes.
 	\end{note}
-	Van egy ismert módszer arra, hogy egy tömb méretét (elemszámát) megkapjuk:
+	Korábban megismerkedtünk egy módszerrel, mely segítségével egy tömb méretét (elemszámát) paraméterátadás után is megőriztük:
 	\begin{lstlisting}
 #include <iostream>
 
@@ -157,7 +158,7 @@ int main()
 	\begin{note}
 		Amennyiben c++11ben programozunk, érdemes az \texttt{std::array}-t használnunk, ami majdnem ugyanaz, mint egy tömb, legalább olyan hatékony, de nem tud pointerré változni és mindig tudja a méretét.
 	\end{note}
-	Ha szeretnénk egy tömböt egy darab paraméterrel átadni, megpróbálhatunk egy tömbre mutató pointert létrehozni. Azonban figyelni kell a szintaktikára, ha \texttt{int *t[5]}-t írunk, egy öt elemű intre mutató pointereket tároló pointert kapunk.
+	Ha szeretnénk egy tömböt egy darab paraméterrel átadni, megpróbálhatunk egy tömbre mutató pointert létrehozni. Azonban figyelni kell a szintaktikára, ha \texttt{int *t[5]}-t írunk, egy öt elemű intre mutató pointereket tároló tömböt kapunk.
 	
 	\medskip
 	Ha valóban tömbre mutató mutatót szeretnék, így csinálhatjuk:
@@ -168,9 +169,12 @@ void g(int (*t)[5])
 }
 	\end{lstlisting}
 	Azonban ez még mindig 8at fog kiírni (ezen az implementáción!), mert a \texttt{t} az egy sima mutató! Ahhoz, hogy megkapjuk, mire mutat, dereferálnunk kell, így a \texttt{sizeof} paraméterének \texttt{*t}-t kell megadni.
+	\begin{note}
+		Nyilván, ha refenreciával vennénk át \texttt{t}-t, az is hasonlóan nézne ki:\, \texttt{int (\&t)[5]}.
+	\end{note}
 	\medskip
 	
-	Itt ha olyat csinálnánk, hogy megnöveljük a tömb méretét egyel, akkor nem fordul le a kód, mert nem tud a g függvényben egy 5 elemű tömbre mutató mutató 6 elemű tömbre mutató mutatóvá konvertálódni.
+	Ha megnöveljük a tömb méretét eggyel, akkor nem fordul le a kód, mert nem tud a g függvényben egy 5 elemű tömbre mutató mutató 6 elemű tömbre mutató mutatóvá konvertálódni.
 	\begin{lstlisting}
 int main()
 {
@@ -181,7 +185,8 @@ int main()
 }
 	\end{lstlisting}
 	
-	\section{Karakterláncok}
+	\section{Literálok}
+	\subsection{Karakterláncok}
 	Mi lesz a \texttt{"Hello"} sztring típusa?
 	\smallskip
 	
@@ -212,6 +217,7 @@ int main()
 }
 	\end{lstlisting}
 	Ha eljászuk azt, hogy az egyik elemet o-ra cseréljük, akkor nem definiált viselkedést kapunk. 
+	%TODO Sajnos ebből nem tudtam jobb leírást kipofozni tudáshiány végett.
 	
 	Futtatáskor (legalábbis ebben az esetben, hisz nem definiált viselkedésről van szó) futási idejű hibát kapunk, méghozzá szegmentálási hibát. Ennek a magyarázata a követekző: van a gépünknek sima és virtuális memóriája. Megfigyelhető, hogy sokkal több memóriát tudunk használni, mint amennyi ténylegesen van. Ez úgy oldható meg, hogy a virtuális memórián az alkalmazásunk kap egy memóriaterületet. Ezen a memóriacímen vannak olyan adatok is, melyek garantáltan nem változnak: a program kódja, és a fenti \texttt{"Hello"} szint is ilyen. Ezek külön vannak tárolva azok adatoktól, melyek változhatnak. 
 	
@@ -225,7 +231,7 @@ int main()
 	
 	\medskip
 	Ez jól rámutat arra, hogy miért is nem jó az, ha a fenti hibát megengedjük.
-	\section{Literálok}
+	\subsection{Szám literálok} %TODO tuti jó ez a cím?
 	Függően attól hogy egy számot hogyan írunk c++ban, mást jelenthet:
 	\begin{center}
 		\begin{tabular}{|c|l|}
@@ -260,14 +266,34 @@ int main()
 	\begin{note}
 		Viszonylag kevés esetben éri meg \texttt{float}-ot használni \texttt{double} helyett. Modern CPU-k ugyanolyan hatékonyan dolgoznak mind a kettővel, így érdemesebb a pontosabbat választani. (Ha magát a GPU-t programozzuk, az lehet egy kivétel.)
 	\end{note}
-	A \texttt{sizeof(char)} mindig 1-et ad vissza. A karakter mérete mindig az egység. A \texttt{sizeof} függvény azt adja vissza, hogy paraméterül megadott dolog mennyi \texttt{char} méretű. A kérdésre, hogy mennyi \texttt{sizeof(char)} mennyi, a válasz mindig 1, de hogy ezt valóban hány byte-on tároljuk, az már implementációfüggő.
-	\medskip
 	
 	Létezik c++ban \texttt{signed} kulcsszó, mely eredetileg a char miatt volt, mert az is egész számokat tartalmazott, de azt nem definiálták külön, hogy a \texttt{char} lehessen vagy ne lehessen signed, ezért az, hogy egy adott platformon lehet-e az, az implementációfüggő.
 	\begin{note}
 		Érdemes mindig \texttt{int}et használnunk, hacsak nincs jó okunk arra, hogy \texttt{short}-ot, vagy \texttt{long}-ot írjunk. Az \texttt{int}-el általában a leghatékonyabb a processzor.
 	\end{note}
-	\subsection{Struktúrák mérete}
+	\section{Struktúrák mérete}
+	A \texttt{sizeof(char)} mindig 1-et ad vissza. A karakter mérete mindig az egység. Minden más típusra a \texttt{sizeof} függvény azt adja vissza, hogy paraméterül megadott dolog mennyi \texttt{char} méretű. 
+	
+	A kérdésre, hogy mennyi \texttt{sizeof(char)}, a válasz mindig 1, de hogy ezt valóban hány byte-on tároljuk, az már implementációfüggő.
+	
+	\medskip
+	A \texttt{char} méretén túl minden másnak a \texttt{sizeof}-ja teljesen implementációfüggő, bár a szabvány kimond pár szabályt:
+	\begin{center}
+		\texttt{sizeof(int) == sizeof(signed) == sizeof(unsigned)}
+		\smallskip
+		
+		\texttt{sizeof(float) == sizeof(double) == sizeof(long double)}
+		\smallskip
+		
+		\texttt{sizeof(short) $\leq$ sizeof(int) $\leq$ sizeof(long)}
+		\smallskip
+		
+		\texttt{sizeof(char) == sizeof(unsigned char) == sizeof(signed char)}
+		\smallskip
+		
+		\texttt{sizeof(char) $\leq$ sizeof(bool)}
+		\smallskip
+	\end{center}
 	\begin{lstlisting}
 #include <iostream>
 
@@ -285,7 +311,7 @@ int main()
 	std::cout << sizeof(Hallgato) << std::endl;
 }
 	\end{lstlisting}
-	Itt, ezen a gépen a \texttt{double} mérete 8, az \texttt{int} mérete 4, \texttt{Hallgato}-é 16. Ezen azt látjuk, hogy a \texttt{Hallgato} tiszta adat.
+	Ezen a gépen a \texttt{double} mérete 8, az \texttt{int} mérete 4, \texttt{Hallgato}-é 16. Ezen azt látjuk, hogy a \texttt{Hallgato} tiszta adat.
 	\begin{lstlisting}
 struct Hallgato
 {
@@ -296,27 +322,44 @@ struct Hallgato
 	\end{lstlisting} 
 	Amikor ennek a méretét kérdezzük le (figyeljük meg, hogy változott a sorrend), akkor a válasz már 24. Ennek az oka az, hogy míg az első esetben így volt eltárolva a memóriában: (ne feledjük, ez még mindig implementációfüggő!)
 	\begin{center}
-		\begin{tabular}{|c||c|c|}
-			\hline
-			atlag&k&m\\
-			\hline
-		\end{tabular}
+		\begin{tikzpicture}
+		\tikzstyle{Node} = [rectangle, minimum width=2.5cm, minimum height=7mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{HalfNode} = [rectangle, minimum width=1.25cm, minimum height=7mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{arrow} = [thick,->,>=stealth]
+		
+		\node (1) [Node] {atlag};
+		\node (2) [HalfNode, right = 0mm of 1] {kor};
+		\node (3) [HalfNode, right = 0mm of 2] {mag};
+		
+		\end{tikzpicture}
 	\end{center}
-	Azaz, \texttt{atlag}, illetve \texttt{kor} és \texttt{magassag} pont efértek 1-1 gép szóban. Viszont, ha megcseréljük a sorrendet, pont nem férne bele 1 gép szóba.
+	Azaz, \texttt{atlag}, illetve \texttt{kor} és \texttt{magassag} pont efértek 1-1 gép szóban. Viszont, ha megcseréljük a sorrendet, ez már nem lesz igaz:
 	\begin{center}
-		\begin{tabular}{|c|c||c|c|}
-			\hline
-			k&atl&ag&m\\
-			\hline
-		\end{tabular}
+		\begin{tikzpicture}
+		\tikzstyle{Node} = [rectangle, minimum width=2.5cm, minimum height=7mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{HalfNode} = [rectangle, minimum width=1.25cm, minimum height=7mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{arrow} = [thick,->,>=stealth]
+		
+		\node (1) [HalfNode] {kor};
+		\node (2) [Node, right = 0mm of 1] {atlag};
+		\node (3) [HalfNode, right = 0mm of 2] {mag};
+		\draw [thick, black] (1.95,-0.35) -- (1.95,0.35);
+		\end{tikzpicture}
 	\end{center}
 	Sajnos itt már szétvágná \texttt{atlag}-ot. Ez nagyon nem hatékony, mert állandóan gondolnia kéne a fordítónak arra, hogy épp hogyan kaparja össze \texttt{atlag}-ot.
 	\begin{center}
-		\begin{tabular}{|c|c||c||c|c|}
-			\hline
-			k&\quad &atlag&m&\quad \\
-			\hline
-		\end{tabular}
+		\begin{tikzpicture}
+		\tikzstyle{Node} = [rectangle, minimum width=2.5cm, minimum height=7mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{HalfNode} = [rectangle, minimum width=1.25cm, minimum height=7mm, text centered, draw=black, fill= gray!20]
+		\tikzstyle{arrow} = [thick,->,>=stealth]
+		
+		\node (1) [Node] {atlag};
+		\node (2) [HalfNode, left = 0mm of 1] {};
+		\node (3) [HalfNode, left = 0mm of 2] {kor};
+		\node (4) [HalfNode, right = 0mm of 1] {};
+		\node (5) [HalfNode, right = 0mm of 4] {mag};
+		
+		\end{tikzpicture}
 	\end{center}
 	Ez így sokkal hatékonyabb, bár 3 gép szót használ. Ebben az esetben a kód eltárolja, hogy legyen egy kis \textit{padding } a változó után. Tehát semmi extráért nem kell fizetnünk, de attól még picit több memóriát foglalunk le.
 	\smallskip
